# DeepH-dock

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
deepx_dock/: parallel.py
deepx_dock/_cli/: __init__.py  completion.py
deepx_dock/analyze/dataset/: _cli.py  analyze_dataset.py  dft_features.py
deepx_dock/analyze/error/: _cli.py  with_infer_res.py  with_train_log.py
deepx_dock/analyze/graph/: __init__.py  _cli.py  analyze_graph.py
deepx_dock/compute/density_matrix/: density_matrix.py
deepx_dock/compute/eigen/: _cli.py  band.py  fermi_dos.py  hamiltonian.py  ill_conditioned.py  matrix_obj.py  wavefunction.py
deepx_dock/convert/abacus/: _cli.py  translate_abacus_to_deeph.py
deepx_dock/convert/deeph/: _cli.py  minus_core_hamiltonian.py  standardize_hamiltonian.py  translate_old_dataset_to_new.py
deepx_dock/convert/fhi_aims/: _cli.py  aims_to_deeph.py
deepx_dock/convert/hopcp/: _cli.py  translate_deeph_to_petsc.py
deepx_dock/convert/openmx/: _cli.py  translate_openmx_to_deeph.py
deepx_dock/convert/qe/: _cli.py  translate_espresso_to_deeph.py
deepx_dock/convert/siesta/: _cli.py  translate_siesta_to_deeph.py
design/: FAQ.md  README.md  TODO.md  analysis.md  architecture.md  compute.md  converters.md  development.md
docs/: index.rst  installation_and_setup.md
docs/for_developers/: development_guide.md
examples/analyze/dataset/: demo.ipynb
examples/analyze/error/: demo.ipynb
examples/compute/eigen/: build_dense_supercell_hs.py  demo.ipynb  transform_k_to_r_pipeline.py
examples/convert/abacus/: demo.ipynb
examples/convert/deeph/: demo.ipynb
examples/convert/fhi_aims/: demo.ipynb
examples/convert/hopcp/: demo.ipynb
examples/convert/openmx/: demo.ipynb
examples/convert/siesta/: demo.ipynb
tests/: README.md  conftest.py
tests/analyze/dataset/: run_test.sh  test_dataset.py
tests/analyze/dft_equiv/: test_dft_equiv.py
tests/analyze/error/: run_test.sh  test_error.py
tests/analyze/graph/: test_analyze_graph.py
tests/compute/eigen/: run_test.sh  test_eigen.py
tests/convert/abacus/: run_test.sh  test_abacus.py
tests/convert/deeph/: run_test.sh  test_deeph.py
tests/convert/fhi_aims/: test_fhi_aims.py
tests/convert/hopcp/: run_test.sh  test_hopcp.py
tests/convert/openmx/: run_test.sh  test_openmx.py
tests/convert/siesta/: run_test.sh  test_siesta.py
tests/design/twist_2d/: POSCAR-BN  POSCAR-C  POSCAR-Twisted.bak  test_twist_2d.py
tests/fixtures/: comparison.py
tests/misc/: test_misc.py
