[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "deepx-dock"
version = "0.9.12"
authors = [
    {name = "DeepH team", email = "deeph-pack@outlook.com"},
]
description = "DeepH-dock seamlessly integrates deep learning with first-principles calculations. It serves as a modular and extensible bridge, functioning both as the dedicated interface for the DeepH-pack suite and as a standalone tool for coupling deep learning models with computational materials science workflows."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "DeepH-dock", "DeepH-pack", "Physics", "Deep Learning", "Graph Neural Network", "JAX", "FHI-aims", "OpenMX", "ABACUS", "SIESTA", "HPRO"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy",
    "h5py",
    "tqdm",
    "toml",
    "scipy",
    "matplotlib",
    "mendeleev",
    "libtetrabz",
    "threadpoolctl",
    "click",
    "ase",
    "mpi4py",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    
    # Linting & Formatting
    "ruff>=0.1.0",
    "black>=23.0",
    
    # Type checking
    "mypy>=1.0",
    
    # Pre-commit hooks
    "pre-commit>=3.0",
    
    # Documentation (inherit from docs)
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "ipykernel",
    "myst_nb",
    "nbstripout",
    "recommonmark",
    "ipython_genutils",
    "sphinx-design",
    "jupytext",
    "docutils",
]

docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "ipykernel",
    "myst_nb",
    "nbstripout",
    "recommonmark",
    "ipython_genutils",
    "sphinx-design",
    "jupytext",
    "docutils",
]

petsc = [
    "mpi4py",
    "numpy",
    "petsc",
    "petsc4py",
]

pyscf = [
    "pyscf",
]

fhiaims = [
    "scalapack4py",
    "asi4py",
]

[project.urls]
Repository = "https://github.com/kYangLi/DeepH-dock.git"

[project.scripts]
dock = "deepx_dock._cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["deepx_dock*"]
exclude = [
    "docs*", "examples*", "tests*", ".*",
    "*.egg-info", "build*", "Makefile"
]

[tool.setuptools.package-data]
"deepx_dock" = [
    "**/*.toml",
    "**/*.h5",
    "**/*.json",
    "**/*.sh",
    "**/Makefile",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
